docs: add footer class

--- a/1.clone_webpage/clone_soylent.html
+++ b/1.clone_webpage/clone_soylent.html
@@ -9,7 +9,8 @@
     <header>
     </header>
     
-    <footer>
+    <footer class="footer" data-section-id="footer" data-section-type="footer">
+	
     </footer>
 </body>
 </html>
