--- a/1.clone_webpage/clone_soylent.html
+++ b/1.clone_webpage/clone_soylent.html
@@ -10,6 +10,20 @@
     </header>
     
     <footer class="footer" data-section-id="footer" data-section-type="footer">
+        <div class="footer__container container">
+            <div class="footer__inner">
+                <div class="footer__top">
+                    <div class="footer__columns">
+                        <div class="footer__column-menu"></div>
+                        <div class="footer__column-menu"></div>
+                        <div class="footer__social-list"></div>
+                    </div>
+                    <div class="footer__subscribe-form"></div>
+                </div>
+                <div calss="gooter__bottom"></div>
+            </div>
+
+        </div>
 	
     </footer>
 </body>
